<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TableViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">사용자명</string>
    <string name="password">비밀번호</string>
    <string name="driver">드라이버</string>
    <string name="url">URL</string>
    <string name="connect">접속</string>
    <string name="close">종료</string>
    <string name="table_name">테이블명</string>
    <string name="comment">|설명</string>
    <string name="sign_prev">&lt;</string>
    <string name="sign_next">&gt;</string>
    <string name="go_table_list">목록</string>
    <string name="ip_address">IP 주소</string>

</resources>
