<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPrev"
            android:layout_weight="3"
        	android:layout_width="0dp"
	        android:background="@drawable/black_button_left"
        	style="@style/btn_style_004"
            android:layout_height="wrap_content"
            android:text="@string/sign_prev" />

        <Button
            android:id="@+id/btnGoTableList"
            android:layout_weight="3"
        	android:layout_width="0dp"
	        android:background="@drawable/black_button_left"
        	style="@style/btn_style_004"
            android:layout_height="wrap_content"
            android:text="@string/go_table_list" />

        <Button
            android:id="@+id/btnNext"
            android:layout_weight="3"
        	android:layout_width="0dp"
	        android:background="@drawable/black_button_left"
        	style="@style/btn_style_004"
            android:layout_height="wrap_content"
            android:text="@string/sign_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="2dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_name" />

        <TextView
            android:id="@+id/txtTableName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/txtTableComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="TextView" />

    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/txtNo"
	        android:layout_weight="2"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="No" />
	    
	    <TextView
	        android:id="@+id/txtColumnName"
	        android:layout_weight="12"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="|Column Name" />
	    
	    <TextView
	        android:id="@+id/txtType"
	        android:layout_weight="8"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="|Type" />
	    
	    <TextView
	        android:id="@+id/txtLen"
	        android:layout_weight="2.6"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="|Len" />
	    
	    <TextView
	        android:id="@+id/txtNullable"
	        android:layout_weight="2.8"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="|Null" />
	    
	    <TextView
	        android:id="@+id/txtPK"
	        android:layout_weight="2"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="|PK" />
	    
	    <TextView
	        android:id="@+id/txtColumnComment"
	        android:layout_weight="14"
	       	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="|Comment" />
	
	</LinearLayout>

    <ListView
        android:id="@+id/lstColumnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
